outputs/csi300-test/2025-07-27_19-18-52/problem_iter26_response2.txt_stdout.txt
Traceback (most recent call last):
  File "/home/rjj/reevo/problems/csi300/eval.py", line 9, in <module>
    import gpt
  File "/home/rjj/reevo/problems/csi300/gpt.py", line 2
    # Calculate daily return
                            ^
IndentationError: expected an indented block after function definition on line 1
